<resources>
    <string name="app_name">CollectingDialect</string>
    <string name="subtitle">대한민국 방언\n음성 데이터</string>
    <string name="main_title_english">Collecting Korean dialect\nvoice Data</string>
    <string name="menu_title">대한민국 방언 음성 데이터 수집</string>
    <string name="region_question">당신이 거주하는\n지역은 어디입니까?</string>
    <string name="content">목차</string>
    <string name="interview_question_1">질문1. 건강 유지를 위해 가장 중요하게 생각하는 것은 무엇인가요?</string>
    <string name="interview_question_2">질문2. 노인 복지를 위해 가장 중요하게 생각해야 하는 것은 무엇인가요?</string>
    <string name="interview_question_3">질문3. 여가시간에는 무엇을 하시나요?</string>
    <string name="interview_question_4">질문4. 인생 선배로써 해주고 싶은 말은 무엇인가요?</string>
    <string name="interview_question_5">질문5. 스스로 생각하는 노인의 정의는 무엇인가요?</string>
    <string name="collecting_title">Unit 1\n강원도, 경상도 방언 데이터</string>
    <string name="interview">인터뷰(비정형발화)</string>
    <string name="interview_question_title">1. 다음 질문에 자유롭게 답해주세요</string>
    <string name="object_name_title">사물 이름 말하기</string>
    <string name="unit1_button_text_1">UNIT 01</string>
    <string name="unit1_button_text_2">강원도, 경상도 방언 데이터</string>
    <string name="script_title">01\n어휘 발화 (스크립트)</string>
    <string name="script_instruction">• 다음 그림을 보고 상황을 말해 보세요 •</string>
    <string name="interview_title">인터뷰\n(비정형발화)</string>
    <string name="interview_instruction">• 다음 질문에 자유롭게 답해 주세요 •</string>
    <string name="main_title_1">중노년층</string>
    <string name="main_title_2">방언 데이터 수집</string>
    <string name="button_start_title">시작하기</string>
    <string name="button_start_subtitle">START</string>
    <string name="content_title">목차</string>
    <string name="content_title_english">CONTENTS</string>
    <string name="unit1">UNIT 01.</string>
    <string name="guide_script">다음 문장을 따라해 주세요</string>
    <string name="unit2">UNIT 02.</string>
    <string name="conversation_title">2인 대화</string>
    <string name="virtual_partner_title">03\n가상 상대와의 대화</string>
    <string name="qna_title">1인 발화\n질문에 답하기</string>
    <string name="qna_title_over_50_years_old">2인 대화</string>
    <string name="guide_qna">아래 문장을 보고 답해주세요</string>
    <string name="repeat_title">1인 발화\n따라 말하기</string>
    <string name="gender">성별</string>
    <string name="birth_year">출생년도</string>
    <string name="residence_province">거주 도</string>
    <string name="residence_city">거주 시</string>
    <string name="residence_period">거주 기간</string>
    <string name="job">직업</string>
    <string name="academic_background">학력</string>
    <string name="health_condition">건강상태</string>
</resources>