<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.example.collectingdialect.ui.collecting.oneperson.speaker.SpeakerInfoOnePersonViewModel" />
        <import type="android.text.InputType"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_half"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:errorEnabled="true"
                error="@{viewModel.genderError}">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/gender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:hint="@string/gender"
                    android:text="@={viewModel.gender}"
                    dropdown="@{viewModel.genderList}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_year_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_half"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                error="@{viewModel.birthYearError}">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_year_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_CLASS_NUMBER}"
                    android:hint="@string/birth_year"
                    android:text="@={viewModel.birthYearString}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/residence_province_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_half"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:errorEnabled="true"
                error="@{viewModel.residenceProvinceError}">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/residence_province_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:hint="@string/residence_province"
                    android:text="@={viewModel.residenceProvince}"
                    dropdown="@{viewModel.residenceProvinceList}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/residence_city_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender_layout"
                app:layout_constraintStart_toStartOf="@id/guideline_half"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:errorEnabled="true"
                error="@{viewModel.residenceCityError}">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/residence_city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:hint="@string/residence_city"
                    android:text="@={viewModel.residenceCity}"
                    dropdown="@{viewModel.residenceCityList}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/residence_period_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/residence_province_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_half"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                error="@{viewModel.residencePeriodError}">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/residence_period_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_CLASS_NUMBER}"
                    android:hint="@string/residence_period"
                    android:text="@={viewModel.residencePeriodString}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/residence_province_layout"
                app:layout_constraintStart_toStartOf="@id/guideline_half"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                error="@{viewModel.jobError}">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/job_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_CLASS_TEXT}"
                    android:hint="@string/job"
                    android:text="@={viewModel.job}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/academic_background_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/residence_period_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_half"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:errorEnabled="true"
                error="@{viewModel.academicBackgroundError}">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/academic_background_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:hint="@string/academic_background"
                    android:text="@={viewModel.academicBackground}"
                    dropdown="@{viewModel.academicBackgroundList}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/health_condition_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/residence_period_layout"
                app:layout_constraintStart_toStartOf="@id/guideline_half"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/speaker_info_text_field_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:errorEnabled="true"
                error="@{viewModel.healthConditionError}">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/health_condition_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:hint="@string/health_condition"
                    android:text="@={viewModel.healthCondition}"
                    dropdown="@{viewModel.healthConditionList}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/load_info_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintTop_toBottomOf="@id/academic_background_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="데이터 불러오기"
                android:onClick="@{viewModel::onClickLoadInfoButton}"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintTop_toBottomOf="@id/load_info_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="입력완료"
                android:onClick="@{viewModel::onClickButton}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
