<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="com.example.collectingdialect.ui.collecting.old.structured.script.ScriptViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5f9595">

        <TextView
            android:id="@+id/script_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/content_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="20dp"
            android:text="@string/script_title"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/script_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_round_top_corner">

            <TextView
                android:id="@+id/unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/region_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/unit1"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/region_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/unit_text"
                app:layout_constraintBottom_toTopOf="@id/guide_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:text="@{viewModel.regionText}"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/guide_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/region_text"
                app:layout_constraintBottom_toTopOf="@id/dialect_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/guide_script"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/dialect_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/guide_text"
                app:layout_constraintBottom_toTopOf="@id/standard_text"
                android:layout_marginHorizontal="20dp"
                android:text="아아아 테스트\ntest"
                android:textSize="30sp"
                android:gravity="center"
                scriptArray="@{viewModel.dialectScriptArray}"
                scriptIndex="@{viewModel.dialectScriptIndex}"/>

            <TextView
                android:id="@+id/standard_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dialect_text"
                app:layout_constraintBottom_toTopOf="@id/button_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="50dp"
                android:text="아아아 테스트"
                android:textSize="15sp"
                scriptArray="@{viewModel.standardScriptArray}"
                scriptIndex="@{viewModel.standardScriptIndex}"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/previous_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/record_button"
                    android:background="@drawable/button_previous_selector"
                    android:visibility="@{viewModel.dialectScriptIndex == 0 ? View.GONE : View.VISIBLE}"
                    android:onClick="@{viewModel::onClickPreviousButton}"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/record_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/start_recording"
                    android:onClick="@{viewModel::onClickRecordButton}"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/record_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="play"
                    android:visibility="@{viewModel.recordExist ? View.VISIBLE : View.GONE}"
                    android:onClick="@{viewModel::onClickPlayButton}"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/next_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/record_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/button_next_selector"
                    android:visibility="@{viewModel.dialectScriptIndex == viewModel.dialectScriptSize - 1 ? View.GONE : View.VISIBLE}"
                    android:onClick="@{viewModel::onClickNextButton}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
